--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from splinter import Browser\r\n",
     "from bs4 import BeautifulSoup as bs\r\n",
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "news_url= 'https://redplanetscience.com/'\r\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\r\n",
-    "browser = Browser('chrome', **executable_path, headless=False)\r\n",
+    "browser = Browser('chrome', **executable_path, headless=True)\r\n",
     "browser.visit(news_url)\r\n",
     "html = browser.html\r\n",
     "soup = bs(html, \"html.parser\")"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "latest_news = {}\r\n",
     "latest_news['headline'] = soup.find(\"div\", class_=\"content_title\").get_text()\r\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "latest_news"
    ],
@@ -75,12 +75,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'headline': \"NASA's Curiosity Takes Selfie With 'Mary Anning' on the Red Planet\",\n",
-       " 'body': 'The Mars rover has drilled three samples of rock in this clay-enriched region since arriving in July.'}"
+       "{'headline': \"Curiosity Mars Rover's Summer Road Trip Has Begun\",\n",
+       " 'body': 'After more than a year in the \"clay-bearing unit,\" Curiosity is making a mile-long journey around some deep sand so that it can explore higher up Mount Sharp.'}"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "jpl_mars_url = 'https://spaceimages-mars.com/'\r\n",
     "browser.visit(jpl_mars_url)\r\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "featured_image = f\"{jpl_mars_url}{soup.find('img',class_='headerimage')['src']}\""
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "mars_facts_url = 'https://galaxyfacts-mars.com/'\r\n",
     "browser.visit(mars_facts_url)\r\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "table = soup.find(\"table\", class_=\"table\")\r\n"
    ],
@@ -143,14 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "source": [
-    "df = pd.read_html(mars_facts_url)[1].transpose()\r\n",
-    "df.columns = df.iloc[0]\r\n",
-    "df.drop(0,inplace=True)\r\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "df = pd.read_html(mars_facts_url)[1]\r\n",
+    "tableresult = df.to_html(index=False)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <td>Moons:</td>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
    "metadata": {}
   },
   {
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
     "astrogeology_url = 'https://marshemispheres.com/'\r\n",
     "browser.visit(astrogeology_url)\r\n",
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "source": [
     "hemisphere_image_urls = []"
    ],
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "source": [
     "\r\n",
     "results = soup.find_all('div',class_=\"item\")\r\n",
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "source": [
     "hemisphere_image_urls"
    ],
@@ -222,7 +231,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 13
     }
    ],
    "metadata": {}
