--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -75,8 +75,8 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'headline': \"Curiosity Mars Rover's Summer Road Trip Has Begun\",\n",
-       " 'body': 'After more than a year in the \"clay-bearing unit,\" Curiosity is making a mile-long journey around some deep sand so that it can explore higher up Mount Sharp.'}"
+       "{'headline': \"NASA's Treasure Map for Water Ice on Mars\",\n",
+       " 'body': 'A new study identifies frozen water just below the Martian surface, where astronauts could easily dig it up.'}"
       ]
      },
      "metadata": {},
@@ -143,21 +143,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "source": [
     "df = pd.read_html(mars_facts_url)[1]\r\n",
-    "tableresult = df.to_html(index=False)"
+    "table = df.to_html(index=False,header=False)\r\n",
+    "table.replace('\\n','')"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <td>Moons:</td>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "'<table border=\"1\" class=\"dataframe\">  <tbody>    <tr>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <td>Moons:</td>      <td>2 ( Phobos &amp; Deimos )</td>    </tr>    <tr>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 37
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "df.rename(columns={0:'key',1:'data'},inplace=True)\r\n",
+    "df.set_index(\"key\",inplace=True)\r\n",
+    "tableresult = df.to_html()\r\n",
+    "tableresult.replace('\\n','')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                               data\n",
+       "key                                                \n",
+       "Equatorial Diameter:                       6,792 km\n",
+       "Polar Diameter:                            6,752 km\n",
+       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
+       "Moons:                        2 ( Phobos & Deimos )\n",
+       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
+       "Orbit Period:                  687 days (1.9 years)\n",
+       "Surface Temperature:                   -87 to -5 °C\n",
+       "First Record:                     2nd millennium BC\n",
+       "Recorded By:                   Egyptian astronomers"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Equatorial Diameter:</th>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Polar Diameter:</th>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2 ( Phobos &amp; Deimos )</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orbit Distance:</th>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orbit Period:</th>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Surface Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>First Record:</th>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Recorded By:</th>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
     }
    ],
    "metadata": {}
